--- a/hocvien.html
+++ b/hocvien.html
@@ -87,7 +87,7 @@
             </div>
          </div>
       </div>
-    
+
                                            <!--Câu chuyện thành công-->
                                            <!-- Start content -->
       <div class="main">
@@ -98,25 +98,25 @@
             <div class="row" id="bgr" >
                <div class="col-md-3">
                   <div class="fast_access  ">
-                     <ul class="list_access ">
-                        <li ><img src="images/hometobica/home.png" width="40px" style="margin-right:5px;" alt="">FAST ACCESS</li>
-                        <li><a href="#11" ><img src="images/hometobica/muiten.png" alt="">Basic Class 1</a></li>
-                        <li><a href="#12"><img src="images/hometobica/muiten.png" alt="">Basic class 2</a></li>
-                        <li><a href="#13"><img src="images/hometobica/muiten.png" alt="">Event</a></li>
-                        <li><a href="#14"><img src="images/hometobica/muiten.png" alt="">Advanced English 1</a></li>
-                        <li><a href="#16"><img src="images/hometobica/muiten.png" alt="">News</a></li>
-                        <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
-                     </ul>
+                    <ul class="list_access ">
+                       <li ><img src="images/hometobica/home.png" width="40px" style="margin-right:5px;" alt="">FAST ACCESS</li>
+                       <li><a href="Basic_course.html" ><img src="images/hometobica/muiten.png" alt="">Basic Course</a></li>
+                       <li><a href="#12"><img src="images/hometobica/muiten.png" alt="">Basic class </a></li>
+                       <li><a href="#13"><img src="images/hometobica/muiten.png" alt="">Event</a></li>
+                       <li><a href="#14"><img src="images/hometobica/muiten.png" alt="">Advanced Course</a></li>
+                       <li><a href="#16"><img src="images/hometobica/muiten.png" alt="">News</a></li>
+                       <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
+                    </ul>
                   </div>
               <a href="#bool">    <img style="margin-top:20px;margin-left:10px;" src="images/hometobica/book.png" id="book" width="260px" height="400px;" alt=""></a>
                </div>
                <div class="col-md-3">
                   <div class="text-center mb-4 mt-4"  >
-                     <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;">
+                     <div class="card mx-auto img-fluid hv"  style="height:380px;width: 14.6rem;">
                         <figure>
                            <img class="card-img-top img"  src="images/hometobica/nga.png" alt="Card image cap">
                            <h5 class="card-title">
-                              <!--images/hv4.jpg Miss fortune-->Van Nguyen
+                            Van Nguyen
                            </h5>
                            <h6 class="card-title">Interpreter</h6>
                            <p class="card-text text-dark">I have put in a lot of effort to succeed, and i will never give up</p>
@@ -125,7 +125,7 @@
                      </div>
                   </div>
                   <div class="text-center mb-4 mt-4">
-                     <div class="card mx-auto img-fluid hv"   style="width: 14.6rem;">
+                     <div class="card mx-auto img-fluid hv"   style="height:380px;width: 14.6rem;">
                         <figure>
                            <img class="card-img-top img"   src="images/hvv2.jpg" alt="Card image cap">
                            <h5 class="card-title">Jenny Pham</h5>
@@ -138,7 +138,7 @@
                </div>
                <div class="col-md-3">
                   <div class="text-center mb-4 mt-4">
-                     <div class="card mx-auto img-fluid hv" style="width: 14.6rem;">
+                     <div class="card mx-auto img-fluid hv" style="width: 14.6rem;height:380px;">
                         <figure>
                            <img class="card-img-top img"  src="images/hv1.jpeg" alt="Card image cap">
                            <h5 class="card-title">Tony stark</h5>
@@ -149,7 +149,7 @@
                      </div>
                   </div>
                   <div class="text-center mb-4 mt-4">
-                     <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;">
+                     <div class="card mx-auto img-fluid hv"  style="width: 14.6rem;height:380px;">
                         <figure>
                            <img class="card-img-top img"  src="images/hvv3.jpg" alt="Card image cap">
                            <h5 class="card-title">Jayce hein</h5>
@@ -161,7 +161,7 @@
                   </div>
                </div>
                <div class="col-md-3" >
-                  <a href="#nn" style="">   <img style="margin-top:20px" src="images/hometobica/qcao.png" width="260px" height="300px" alt=""></a>
+                  <a href="#nn" style="" >   <img id="qcao"style="margin-top:20px" src="images/hometobica/qcao.png" width="260px" height="300px" alt=""></a>
                   <form class="" action="" method="post" style="background:#FFC107;margin-top:22px;">
                      <div style="margin-left:10px;padding-right:10px;">
                         <h5 style="color:#003F7E;padding-top:20px;">Sign up for advice immediately</h5>
@@ -193,7 +193,9 @@
                  </div>
 
       <!-- Kết thúc nội dung-->
-            <div class="row" style="background:white; margin-top:80px;">
+        <hr>
+            <div class="row" style="background:white; margin-top:30px;">
+
              <div class="col-md-8">
 
 
@@ -202,7 +204,7 @@
   </p>
 
 
-     <img src="images/eduonl.jpg" width="550px" height="350px" class="" alt="...">
+     <img src="images/eduonl.jpg"  width="550px" height="350px" style="margin-left: 100px;margin-bottom:20px;" class="" alt="...">
 
        <h5 class="">Be Ready To Act</h5>
        <p class="">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years.</p><p> English is also the required graduation exam for all levels.
