--- a/hocvien.html
+++ b/hocvien.html
@@ -87,9 +87,8 @@
             </div>
          </div>
       </div>
-
-                                           <!--Câu chuyện thành công-->
-                                           <!-- Start content -->
+             <!--Câu chuyện thành công-->
+               <!-- Start content -->
       <div class="main">
       <div class="wrapper">
 
@@ -187,18 +186,12 @@
                         <br>
                         <input class="btn btn-primary " style="margin-left:80px;margin-bottom:20px;margin-top:10px;" type="submit" onclick="alert('Your information was sent')" value="Submit">
                      </div>
-
-
                    </div>
                  </div>
-
       <!-- Kết thúc nội dung-->
         <hr>
             <div class="row" style="background:white; margin-top:30px;">
-
              <div class="col-md-8">
-
-
        <h5 class=""><b>How important is English?</b></h5>
        <p class="">English and the level of importance to the lives of Vietnamese students and students.</p><p> When it comes to English, people think of it as a global language: the official language of more than 53 countries and territories, the official language of the EU and the third language spoken by many people. most are only after Chinese and Spanish (you should note that China has a population of more than 1 billion people). International events, global organizations, etc. also default to English as the language of communication.
   </p>
@@ -210,6 +203,8 @@
        <p class="">Understanding that, the Vietnamese education system has put English as a compulsory subject in the school chair from the elementary years.</p><p> English is also the required graduation exam for all levels.
     But the reality of learning English in Vietnam is still a headache for educators as well as parents who want their children to be good at English. How to find a standard method of learning English, help your child to improve rapidly.</p><p> Why do the students and students study more than ten years of English in the school but when they graduate, most of them do not deliver Can you speak English? </p>
         <p class=""><small class="text-muted">Last updated 3 mins ago</small></p>
+        <a href="#nnd">  <img src="images/homeTobica/news.gif" style="margin-right:50px;" alt="">
+          <img src="images/homeTobica/news2.gif" alt=""></a>
    </div>
                <div class="col-md-4">
                   <a href="#bann"><img class="gifplayer" src="images/homeTobica/bann.jpg"  width="350px"/></a>
@@ -259,6 +254,7 @@
                </div>
                <!-- End content -->
             </div>
+
 </div>
 </div>
 </div>
@@ -293,8 +289,8 @@
                   <!-- End footer-address-->
                   <!-- Start footer-payment-->
                   <div class="col-lg-3 col-md-6 col-sm-12">
-                     <div class="footer-payment">
-                        <div class="pre-footer-heading">
+                    <div class="footer-payment">
+                    <div class="pre-footer-heading">
                            <h5>Payment</h5>
                         </div>
                         <div class="row">
@@ -368,7 +364,6 @@
             </div>
          </div>
       </div>
-
       <!--End footer -->
       <!-- Script -->
       <script type="text/javascript" src="js/jquery.lazy-master/jquery.lazy.min.js"></script>
@@ -378,5 +373,6 @@
       <script type="text/javascript" src="js/slide.js"></script>
       <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
       <script type="text/javascript" src="bootstrap/bootstrap.min.js"></script>
+
    </body>
 </html>
