--- a/Contact.html
+++ b/Contact.html
@@ -247,14 +247,14 @@
 				<div class="tab-content">
 
 				  <div id="menu1" class="tab-pane in active">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8688.524106241062!2d105.78165320077578!3d21.02898912684822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abbfa96f309f%3A0x7917af0f83effe1b!2sFPT+University+Hanoi!5e0!3m2!1sen!2s!4v1549974983906" width="1108" height="100%" frameborder="1" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14011.691404340128!2d105.77802480310578!3d21.02871974680379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abbfa96f309f%3A0x7917af0f83effe1b!2zxJDhuqFpIEjhu41jIEZQVCBN4bu5IMSQw6xuaA!5e1!3m2!1svi!2s!4v1550157251309" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				  </div>
 				  <div id="menu2" class="tab-pane fade">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8688.524106241062!2d105.78165320077578!3d21.02898912684822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abbfa96f309f%3A0x7917af0f83effe1b!2sFPT+University+Hanoi!5e0!3m2!1sen!2s!4v1549974983906" width="1108" height="100%" frameborder="1" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5439.911161084146!2d105.81645108748145!3d21.035501408035802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab0d6eedb3b9%3A0xe096499f4f1f76be!2sAPTECH+Computer+Education!5e1!3m2!1svi!2s!4v1550157315469" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				  </div>
 					
 				  <div id="menu3" class="tab-pane fade">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8688.524106241062!2d105.78165320077578!3d21.02898912684822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abbfa96f309f%3A0x7917af0f83effe1b!2sFPT+University+Hanoi!5e0!3m2!1sen!2s!4v1549974983906" width="1108" height="100%" frameborder="1" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27364.929059095502!2d105.51508403121703!3d21.0142053465305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b32ca5086d%3A0xa3c62e29d8ab37e4!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBGUFQ!5e1!3m2!1svi!2s!4v1550157370013" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				  </div>
 				</div>
 				<!--End of Maps-->
