--- a/Contact.html
+++ b/Contact.html
@@ -231,7 +231,7 @@
 
 								<br><br>
 								<button id="align" type="reset">RESET FORM</button>
-								<button type="submit"><a href="home.html">SUBMIT FORM</a></button>
+								<button type="submit"><a href="returnsubmit.html">SUBMIT FORM</a></button>
 							</form>
 						</div>
 					</div>
