--- a/Contact.html
+++ b/Contact.html
@@ -89,7 +89,7 @@
                       </div>
                    </nav>
                    <div class="col-md-3 tobica-login float-right">
-                      <button type="button" class="btn btn-warning btn-login-tobica">Login</button>
+                      <button type="button" class="btn btn-warning btn-login-tobica"><a href="login.html">Login</a></button>
                    </div>
                    <div>
                    </div>
