Hao: add library.html

--- a/library.html
+++ b/library.html
@@ -66,13 +66,7 @@
                                </div>
                             </li>
                             <li class="nav-item dropdown ">
-                               <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
-                               Library
-                               </a>
-                               <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
-                                  <a class="drop-item" href="hocvien.html">Student photos</a>
-                                  <a class="drop-item" href="#">Event photos</a>
-                               </div>
+                               <a class="nav-link drop-toggle" href="library.html" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">Library</a>
                             </li>
                             <li class="nav-item dropdown ">
                                <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
