--- a/Basic_course.html
+++ b/Basic_course.html
@@ -53,15 +53,9 @@
                                     <a class="drop-item" href="#">Course Toeic - Toefl</a>
                                  </div>
                               </li>
-                              <li class="nav-item dropdown ">
-                                 <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
-                                 Library
-                                 </a>
-                                 <div class="drop-menu menu_page" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="drop-item" href="hocvien.html">Student photos</a>
-                                    <a class="drop-item" href="#">Event photos</a>
-                                 </div>
-                              </li>
+                            <li class="nav-item dropdown ">
+                               <a class="nav-link drop-toggle" href="library.html" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">Library</a>
+                            </li>
                               <li class="nav-item dropdown ">
                                  <a class="nav-link drop-toggle" href="#" id="navbarDropdToeic Exam Preparation Course - ToeflownMenuLink">
                                  Contact
