sửa login, thêm thẻ a vào logo, sửa slideshow

--- a/Basic_course.html
+++ b/Basic_course.html
@@ -24,7 +24,7 @@
             <div class="container">
                <div class="row head_page">
                   <div class="col-md-12 clearfix header-section">
-                     <div class="col-md-2 tobica-logo float-left"><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""></div>
+                     <div class="col-md-2 tobica-logo float-left"> <a href="home.html" title=""><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""></a>></div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                         </div>
                      </nav>
                      <div class="col-md-3 tobica-login float-right">
-                        <button type="button" class="btn btn-warning btn-login-tobica"><a href="login.html">Login</a></button>
+                        <button type="button" class="btn btn-warning btn-login-tobica"><a href="login.html" style="color: black;">Login</a></button>
                      </div>
                      <div>
                      </div>
