--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
             <div class="container">
                <div class="row head_page">
                   <div class="col-md-12 clearfix header-section">
-                     <div class="col-md-2 tobica-logo float-left" ><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""> </div>
+                     <div class="col-md-2 tobica-logo float-left" > <a href="home.html" title=""><img src="images/homeTobica/logo.png" width="100px" style="margin-top:12px;"  alt=""></a> </div>
                      <nav class="navbar navbar-expand-lg navbar-light float-left">
                         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -109,7 +109,7 @@
                         </div>
                      </nav>
                      <div class="col-md-3 tobica-login">
-                        <button type="button" class="btn btn-warning btn-login-tobica"><a href="login.html">Login</a></button>
+                        <button type="button" class="btn btn-warning btn-login-tobica"><a href="login.html" style="color: black;">Login</a></button>
                      </div>
                      <div>
                      </div>
@@ -134,7 +134,7 @@
                         </ol>
                         <div class="carousel-inner tobica-slideshow">
                            <div class="carousel-item active">
-                              <img src="images/slide1.jpg" class="d-block w-100" alt="...">
+                              <img src="images/slide3.jpg" class="d-block w-100" alt="...">
                               <div class="carousel-caption d-none d-md-block">
                                  <h2>Train communication skills</h2>
                                  <p>...</p>
@@ -148,7 +148,7 @@
                               </div>
                            </div>
                            <div class="carousel-item">
-                              <img src="images/slide3.jpg" class="d-block w-100" alt="...">
+                              <img src="images/slide1.jpg" class="d-block w-100" alt="...">
                               <div class="carousel-caption d-none d-md-block">
                                 <h2>Reaching dreams</h2>
                                  <p>...</p>
@@ -314,7 +314,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-md-12 bg-warning" style="height: 40px">
+                  <div class="col-md-12 bg-warning" style="height: 40px;margin-bottom: 20px;">
                   </div>
                </div>
                <div  class=" section ">
@@ -375,7 +375,7 @@
                   </div>
                </div>
                <div class="row">
-                  <div class="col-md-12 bg-warning" style="height: 40px">
+                  <div class="col-md-12 bg-warning" style="height: 40px;margin-bottom: 20px;">
                   </div>
                </div>
                <div class="text-center">
@@ -414,7 +414,7 @@
                      <iframe width="500" height="275" src="https://www.youtube.com/embed/juKd26qkNAw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                </div>
-               <div class="row"style="background:white">
+               <div class="row" style="background:white">
                   <div class="col-md-3">
                      <h1>1</h1>
                      <h5 class="h5">METHOD</h5>
@@ -454,7 +454,7 @@
                </div>
                </div>
                <div class="row">
-                  <div class="col-md-12 bg-warning" style="height: 40px">
+                  <div class="col-md-12 bg-warning" style="height: 40px; margin-top: 30px;">
                   </div>
                </div>
     <div style="margin-top: 10px;" class="">
