--- a/home.html
+++ b/home.html
@@ -320,10 +320,10 @@
                <div  class=" section ">
                   <div class="row mission" style="background:white">
                      <div class="col-md-6">
-                        <h3>WORLD CLASS FACILITIES</h3>
+                        <h3>FACILITIES</h3>
                         <hr>
 
-                        <p>Avada University is devoted to excellence in teaching, learning, and research, and developing leaders in many disciplines who make a difference globally.</p>
+                        <p>Tobica center is devoted to excellence in teaching, learning, and research, and developing leaders in many disciplines who make a difference globally.</p>
                         <br>
                         <p >
                         <h5><img src="images/hometobica/pt1.png" alt=""> International focus</h5>
@@ -478,7 +478,7 @@
 </div>
 <div class="comment_2">
 <h5>ThuyLinh(student)</h5>
-<h6>Toi that su cam thay rat vui mung khi biet den tobica English tobica English .</h6>
+<h6>Toi that su cam thay rat vui mung khi biet den tobica English .</h6>
 <p>2018-05-01 10:23 </p>
 </div>
 </div>
