sửa news phần học viên

--- a/hocvien.html
+++ b/hocvien.html
@@ -202,7 +202,7 @@
    </div>
                <div class="col-md-4">
                   <a href="#bann"><img class="gifplayer" src="images/homeTobica/bann.jpg"  width="350px"/></a>
-                  <div class="section_new" style="width:340px;">
+                  <div class="section_new" style="width:350px; background-color: #eeffd3">
                      <h3 class="text-center" >News</h3>
                      <div class="section_new_1" style="height:160px">
                         <div class="" style="">
