--- a/Basic_courses.html
+++ b/Basic_courses.html
@@ -90,6 +90,17 @@
                <!-- Start Content -->
                <div class="row bg_kh" style="background:white;">
                   <div class="col-md-3">
+                     <div class="fast_access">
+                       <ul class="list_access ">
+                          <li ><img src="images/hometobica/home.png" width="40px" style="margin-right:5px;" alt="">FAST ACCESS</li>
+                          <li><a href="Basic_course.html" ><img src="images/hometobica/muiten.png" alt="">Basic Course</a></li>
+                          <li><a href="#12"><img src="images/hometobica/muiten.png" alt="">Basic class </a></li>
+                          <li><a href="#13"><img src="images/hometobica/muiten.png" alt="">Event</a></li>
+                          <li><a href="#14"><img src="images/hometobica/muiten.png" alt="">Advanced Course</a></li>
+                          <li><a href="#16"><img src="images/hometobica/muiten.png" alt="">News</a></li>
+                          <li><a href="#15"><img src="images/hometobica/muiten.png" alt="">Toetic Class  <img src="images/hometobica/new.gif" width="40px;" alt=""> </a></li>
+                       </ul>
+                     </div>
                      <div class="fast_access_1">
                         <div class="media">
                           <img class="mr-3" src="images/course_img/remember.jpg" style="height:50px;padding:10px;" alt="Generic placeholder image">
@@ -109,15 +120,19 @@
                            <li>9. Try to communicate English with the porcelain people as much as possible</li>
                         </ul>
                      </div>
-
+                       <div class="card banerr1" style=" height:400px; width: 16.5rem;">
+                          <img class="card-img-top banner1"  src="images/course_img/image_2.jpg" alt="Card image cap">
+                    </div>
                    </div>
 
        <!-- phần chính web-->
 
        <div class="col-md-9 content">
+         <p>
           <h3 style="text-align:center;font-family: sans-serif;"> VIETNAMESE LEARNING ENGLISH ACADEMY ON TRAINING LANGUAGE SKILLS AND COMMUNICATION FOR STUDENTS!</h3><br>
 
            <img src="images/course_img/image_1.jpg" style="width:100%;height:400px;" alt="Symbolic image">
+         </p>
 
          <h4>
              <strong>►LANGUAGE COURSES AND BASIC COMMUNICATIONS FOR NEWBORN BEGINS</strong>
@@ -129,11 +144,48 @@
              <strong>-></strong> Learn <strong class="text-danger">listening, vocabulary, grammar</strong> about the 15 most basic topics in everyday life, specifically designed for <strong class="text-danger">BEGINNERS</strong>.<br>
              <strong>-></strong> Learn how <strong class="text-danger">presentation in English</strong>. 5 soft skills most needed when giving presentations.<br>
              <strong>-></strong> Learn to criticize in English (the peak of communication skills).
-           </ul>
+           </ul><br>
+
+           <span>
+             <strong>►TIME </strong>
+           </span>
+           <h4>
+             <strong>26 class sessions include:</strong>
+           </h4>
+         <ul>
+          <strong>-></strong> 18 main lessons - 3 hours/session. <br>
+           <strong>-></strong> 8 weekly Sunday club sessions to cultivate more knowledge.<br>
+           <strong>-></strong> There are also 8 meetings to talk to foreigners directly.<br>
+           <strong>-></strong> Students are certified by the English Language Institute, which is mostly recognized by businesses!
+         </ul>
+         <h4>
+             <strong>►TUITION: 1.099.000đ</strong>
+         </h4>
+         <h4><strong>HOW TO COMPLETE THE TUITION FEE:</strong></h4><h6>1. Direct:</h6>
+           <p>You come to the office at <strong class="text-danger">8A Ton That Thuyet - Tu Liem - Ha Noi</strong> to reserve and get free advice.</p>
+           <h6>2. Transfer:</h6>
+           <p>Account Holder Name: NGUYEN THU THAO - VIETCOMBANK BANK <br>
+              Card account number:0971000012359 – NAM HANOI Branch<br>
+              Account Transfer Contents: NAME + GRADE + Telephone number <br>
+              <strong>------------</strong>
+            </p>
+         <p></p>
+         <p>
+           </p><h4><strong>►CONTACT INFORMATION:</strong></h4>
+           <h6>Hotline: 02433260666 from 8:00 to 21:00 Monday -> Saturday every week</h6>
+         <p></p>
+         <p>
+           <strong>Center system of the center: <br>
+             Base 1: 8A Ton That Thuyet - Tu Liem - Hanoi.<br>
+             Base 2: 265 Doi Can - Ba Dinh - Hanoi.<br>
+             Base 3: Khu CNC Hoa Lac - Thach That - Ha Noi.
+           </strong>
+         </p>
        </div>
+     </div>
 
      <!-- chọn địa điểm đăng kí khóa học -->
-     <h4>
+     <h4 style="text-align:center;">
        <strong>►REGISTER AND CHOOSE CLASS IN YOUR BELOW <img src="images/course_img/smiley_face_icon.jpg" style="height:25px;" alt="smile"> </strong>
      </h4>
      <div class="frames">
@@ -319,53 +371,6 @@
            </div>
          </div>
        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card banerr1" style=" height:400px; width: 16.5rem;">
-             <img class="card-img-top banner1"  src="images/course_img/image_2.jpg" alt="Card image cap">
-       </div>
-       <img src="images/course_img/pic.gif" class="banner" alt="">
-
-        </div>
-        <div class="col-md-9">
-          <span>
-            <strong>►TIME </strong>
-          </span>
-          <h4>
-            <strong>26 class sessions include:</strong>
-          </h4>
-        <ul>
-         <strong>-></strong> 18 main lessons - 3 hours/session. <br>
-          <strong>-></strong> 8 weekly Sunday club sessions to cultivate more knowledge.<br>
-          <strong>-></strong> There are also 8 meetings to talk to foreigners directly.<br>
-          <strong>-></strong> Students are certified by the English Language Institute, which is mostly recognized by businesses!
-        </ul>
-        <h4>
-            <strong>►TUITION: 1.099.000đ</strong>
-        </h4>
-        <h4><strong>HOW TO COMPLETE THE TUITION FEE:</strong></h4><h6>1. Direct:</h6>
-          <p>You come to the office at <strong class="text-danger">8A Ton That Thuyet - Tu Liem - Ha Noi</strong> to reserve and get free advice.</p>
-          <h6>2. Transfer:</h6>
-          <p>Account Holder Name: NGUYEN THU THAO - VIETCOMBANK BANK <br>
-             Card account number:0971000012359 – NAM HANOI Branch<br>
-             Account Transfer Contents: NAME + GRADE + Telephone number <br>
-             <strong>------------</strong>
-          </p>
-           <h4><strong>►CONTACT INFORMATION:</strong></h4>
-          <h6>Hotline: 02433260666 from 8:00 to 21:00 Monday -> Saturday every week</h6>
-        <p>
-          <strong>Center system of the center: <br>
-            Base 1: 8A Ton That Thuyet - Tu Liem - Hanoi.<br>
-            Base 2: 265 Doi Can - Ba Dinh - Hanoi.<br>
-            Base 3: Khu CNC Hoa Lac - Thach That - Ha Noi.
-          </strong>
-        </p>
-        <h5>** Link to dowload course prices</h5>
-        <button type="button" style="border-radius:50px;margin-bottom:15px;" class="btn btn-danger btn-lg"><a style="color:white" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F18dpwgaFCp1wA7MgCdtAqIouCS06Amz_H%2Fview%3Fusp%3Dsharing%26fbclid%3DIwAR1ZsvlhGypJFkQqDV9iY5cREtA0V2_LZqc_tYSSHDDDo7S63-HLDApD9LM&h=AT0JekvMzgzSwXPXYl7vxPVnFGmmH9ysTIQfDPNofaOMHF9oNcngK5NMhns02AmfxN8MKg_bAO9c6Jc1OKBvtSw-J5nazGV1wNAC4ufE5Nf-FIvJjdJhpAsWPH-Umtbg6SJIGA">DOWLOAD</a></button>
-      </div>
-        </div>
       </div>
      </div>
    </div>
