--- a/Basic_courses.html
+++ b/Basic_courses.html
@@ -169,11 +169,8 @@
               Account Transfer Contents: NAME + GRADE + Telephone number <br>
               <strong>------------</strong>
             </p>
-         <p></p>
-         <p>
-           </p><h4><strong>►CONTACT INFORMATION:</strong></h4>
+           <h4><strong>►CONTACT INFORMATION:</strong></h4>
            <h6>Hotline: 02433260666 from 8:00 to 21:00 Monday -> Saturday every week</h6>
-         <p></p>
          <p>
            <strong>Center system of the center: <br>
              Base 1: 8A Ton That Thuyet - Tu Liem - Hanoi.<br>
@@ -185,7 +182,7 @@
      </div>
 
      <!-- chọn địa điểm đăng kí khóa học -->
-     <h4 style="text-align:center;">
+     <h4>
        <strong>►REGISTER AND CHOOSE CLASS IN YOUR BELOW <img src="images/course_img/smiley_face_icon.jpg" style="height:25px;" alt="smile"> </strong>
      </h4>
      <div class="frames">
