--- a/Basic_course.html
+++ b/Basic_course.html
@@ -134,7 +134,7 @@
 
      <!-- chọn địa điểm đăng kí khóa học -->
      <h4>
-       <strong>►REGISTER AND CHOOSE CLASS IN YOUR BELOW <img src="images/course_img/smiley_face_icon.jpg" style="height:25px;" alt="smile"> </strong>
+       <strong>&nbsp►REGISTER AND CHOOSE CLASS IN YOUR BELOW <img src="images/course_img/smiley_face_icon.jpg" style="height:25px;" alt="smile"> </strong>
      </h4>
      <div class="frames">
      <div class="class-list">
@@ -326,7 +326,7 @@
           <div class="card banerr1" style=" height:400px; width: 16.5rem;">
              <img class="card-img-top banner1"  src="images/course_img/image_2.jpg" alt="Card image cap">
        </div>
-       <img src="images/course_img/pic.gif" class="banner" alt="">
+      <a href="#thuyet"> <img src="images/course_img/pic.gif" class="banner" alt=""></a>
 
         </div>
         <div class="col-md-9">
