--- a/Basic_course.html
+++ b/Basic_course.html
@@ -363,7 +363,7 @@
           </strong>
         </p>
         <h5>** Link to dowload course prices</h5>
-        <button type="button" style="border-radius:50px;margin-bottom:15px;" class="btn btn-danger btn-lg"><a style="color:white" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F18dpwgaFCp1wA7MgCdtAqIouCS06Amz_H%2Fview%3Fusp%3Dsharing%26fbclid%3DIwAR1ZsvlhGypJFkQqDV9iY5cREtA0V2_LZqc_tYSSHDDDo7S63-HLDApD9LM&h=AT0JekvMzgzSwXPXYl7vxPVnFGmmH9ysTIQfDPNofaOMHF9oNcngK5NMhns02AmfxN8MKg_bAO9c6Jc1OKBvtSw-J5nazGV1wNAC4ufE5Nf-FIvJjdJhpAsWPH-Umtbg6SJIGA">DOWLOAD</a></button>
+        <button type="button" style="border-radius:50px;margin-bottom:15px;" class="btn btn-danger btn-lg"><a target="_blank" style="color:white" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F18dpwgaFCp1wA7MgCdtAqIouCS06Amz_H%2Fview%3Fusp%3Dsharing%26fbclid%3DIwAR1ZsvlhGypJFkQqDV9iY5cREtA0V2_LZqc_tYSSHDDDo7S63-HLDApD9LM&h=AT0JekvMzgzSwXPXYl7vxPVnFGmmH9ysTIQfDPNofaOMHF9oNcngK5NMhns02AmfxN8MKg_bAO9c6Jc1OKBvtSw-J5nazGV1wNAC4ufE5Nf-FIvJjdJhpAsWPH-Umtbg6SJIGA">DOWLOAD</a></button>
       </div>
         </div>
       </div>
